--- a/cricket/index.html
+++ b/cricket/index.html
@@ -10,7 +10,7 @@
         <ul class="nav">
            <li><a href="player.html"> PLAYERS</a></li> 
            <li><a href="achievements.html">ACHIEVEMENT</a></li> 
-           <li><a href="aboutus.html">ABOUT US</a></li>
+           <li><a href="aboutUs.html">ABOUT US</a></li>
         </ul>
 
 
