--- a/emerald/index.html
+++ b/emerald/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Cuisines Worldwide</title>
         <link rel = "icon" href = 'carr.jpg' type = 'images/x-icon/'>
-        <link rel="stylesheet" type="text/css" href="CSS/index.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
 
     </head>
 
